# meal

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.config.ts  bacon.toml  name.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-delivery-service.yml  build-docker.yml  build-tugboat.yml  deploy-delivery-service.yml  deploy.yml  docker.yml
app/: index.html  material-tailwind.plugin.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
app/src/: appContext.ts  broadcast.ts  crackle.ts  index.css  index.jsx  index.tsx  messagesUrl.ts  sendMessage.js  socketProxy.ts  useCrackle.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/components/: AppContext.jsx  AppContextProvider.tsx  Camera.jsx  Icons.jsx  Onboarding.jsx  Preview.jsx  TopAppBar.jsx
app/src/database/: index.ts  schema.d.ts
app/src/routes/: chat.jsx  chat.tsx  debug.jsx  index.jsx  index.ts  index.tsx  invite.jsx  invite.tsx  join.jsx  join.tsx
app/src/service-worker/: disposePolyfill.ts  operation.d.ts  register.ts  schema.d.ts  serviceMessage.d.ts  serviceWorker.js  serviceWorker.ts  tsconfig.json
app/src/workers/: saveFile.js  tsconfig.json
app/tests/: invite.spec.ts
core/: Cargo.toml
core/src/: lib.rs
core/src/provider/: mod.rs
core/src/provider/storage/: local.rs  mod.rs  operation.rs
core/src/v2/: mod.rs  provider.rs  serializable.rs
delivery-service/: Cargo.toml
delivery-service/src/: extractor.rs  main.rs  telemetry.rs
delivery-service/src/actor/: client.rs  mod.rs  switchboard.rs  user.rs  web_socket.rs
hybrid/: package.json
hybrid/src-tauri/: Cargo.toml  tauri.conf.json
hybrid/src-tauri/src/: main.rs
pumpe/: Cargo.toml  README.md
pumpe/src/: main.rs
rust/: Cargo.toml
rust/src/: lib.rs
src/: App.jsx  App.tsx  app.css  app.tsx  entry-server.tsx  index.css
src/components/: AppContext.jsx  Icons.tsx  Input.tsx  Onboarding.jsx  test.tsx
src/routes/: index.jsx  index.tsx
tugboat/: Cargo.toml  README.md  app.css  package.json
tugboat/public/: pasteEnvironmentVariables.js
tugboat/src/: container.rs  docker.rs  macro.rs  main.rs  secret.rs
tugboat/src/auth/: authenticated_user.rs  cookie.rs  mod.rs
tugboat/src/database/: create_tables.sql  mod.rs
tugboat/src/route/: container.rs  error.rs  middleware.rs  mod.rs  project.rs  token.rs
tugboat/src/route/container/: draft.rs  edit.rs  environment.rs  mod.rs  modification.rs
tugboat/templates/: error.html  index.html  layout.html  new project.html  project.html  sign in.html
tugboat/templates/container/: draft.html  edit.html  environment.html  index.html  token.html
tugboat/templates/project/: new.html
