[package]
name = "meal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
nanoid = "0.4.0"
openmls = { version = "0.6.0", features = ["js"] }
openmls_basic_credential = "0.3.0"
openmls_rust_crypto = "0.3.0"
openmls_traits = "0.3.0"
postcard = { version = "1.0.10", features = ["alloc"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
thiserror = "1.0.61"
tls_codec = "0.4.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.70"
