[package]
name = "delivery-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros", "ws"] }
serde = { workspace = true, features = ["derive", "rc"] }
thiserror = { workspace = true }
tls_codec = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
