[package]
name = "pumpe"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
camino = "1.1.9"
clap = { version = "4.5.18", features = ["derive"] }
http-body-util = "0.1.2"
# http = "1.1.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["compression-full", "fs"] }
