[package]
name = "pumpe"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
camino = "1.1.9"
clap = { version = "4.5.18", features = ["derive"] }
http-body-util = "0.1.2"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { workspace = true, features = ["compression-full", "fs"] }
